--- a/home.html
+++ b/home.html
@@ -5,27 +5,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>historia da tec</title>
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 
 <body>
     <header>
         <h1>a historia da tecnologia</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet corporis iusto optio minus mollitia
-            asperiores nostrum impedit, expedita tempora perferendis explicabo voluptatum quis vero unde laboriosam
-            accusamus placeat nobis atque.</p>
     </header>
     <main>
         <div class="timeline">
             <ul>
                 <li>
-                    <div class="item" onclick="testNave()">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5S6_4DX969G75VhSwxP8VAwUB6BEsJPfX2Q&s"
+                    <div class="item" onclick="paleolitico()">
+                        <img src="https://i.ibb.co/0jQkn6cC/download.jpg"
                             height="120" width="120">
-                        <h2>computador 1</h2>
-                        <p>brr brr patapin mi capelo é piano de slim</p>
+                        <h2>paleolitico</h2>
+                        <p>o inicio da humanidade</p>
                     </div>
                 </li>
                 <li>
