adicionando barra de pesquisa

--- a/home.html
+++ b/home.html
@@ -12,7 +12,12 @@
 
 <body>
     <header>
+        <img src="img/logo.png" class="topleft" height="100" width="100">
         <h1>a historia da tecnologia</h1>
+        <div class="searchBar toprigth" >
+            <input type="text" placeholder="buscar..." class="searchInput">
+            <img src="img/search.png" class="searchBtn"  height="15" width="15">
+        </div>
     </header>
     <main>
         <div class="timeline">
