--- a/home.html
+++ b/home.html
@@ -1,3 +1,20 @@
+
+1 de 2.194
+(sem assunto)
+Caixa de entrada
+VICTOR HUGO VICHIATO NOGUEIRA
+Anexos
+12:00 (há 2 minutos)
+para mim
+
+Cuidado com esta mensagem.
+Não é possível confirmar se um ou mais anexos desta mensagem são seguros. Não baixe nenhum arquivo se você não conhecer o remetente ou não tiver certeza de que este e-mail foi enviado por ele.
+
+Denunciar spamParece segura
+
+1 anexo
+  •  Anexos verificados pelo Gmail
+O download do anexo foi desativado. Se você confia nesta mensagem e quer fazer o download do anexo, clique em "É segura" no banner acima.
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,42 +29,58 @@
 
 <body>
     <header>
-        <img src="img/logo.png" class="topleft" height="100" width="100">
-        <h1>a historia da tecnologia</h1>
-        <div class="searchBar toprigth" >
-            <input type="text" placeholder="buscar..." class="searchInput">
-            <img src="img/search.png" class="searchBtn"  height="15" width="15">
-        </div>
+        <h1>A História da Tecnologia</h1>
     </header>
     <main>
         <div class="timeline">
             <ul>
                 <li>
                     <div class="item" onclick="paleolitico()">
-                        <img src="https://i.ibb.co/0jQkn6cC/download.jpg"
-                            height="120" width="120">
-                        <h2>paleolitico</h2>
-                        <p>o inicio da humanidade</p>
+                        <img src="https://i.ibb.co/0jQkn6cC/download.jpg" height="120" width="120">
+                        <h2>Paleolítico</h2>
                     </div>
                 </li>
                 <li>
-                    <div class="item">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5S6_4DX969G75VhSwxP8VAwUB6BEsJPfX2Q&s"
-                            height="120" width="120">
-                        <h2>computador 2</h2>
-                        <p>brr brr patapin mi capelo é piano de slim</p>
+                    <div class="item" onclick="neolitico()">
+                        <img src="https://i.ibb.co/Dgzvtg68/neolitico-scaled.jpg" height="120" width="120">
+                        <h2>Neolítico</h2>
                     </div>
                 </li>
                 <li>
-                    <div class="item">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5S6_4DX969G75VhSwxP8VAwUB6BEsJPfX2Q&s"
-                            height="120" width="120">
-                        <h2>computador 3</h2>
-                        <p>brr brr patapin mi capelo é piano de slim</p>
+                    <div class="item" onclick="antiguidade()">
+                        <img src="https://i.ibb.co/3ybjh1SZ/All-Gizah-Pyramids.jpg" height="120" width="120">
+                        <h2>Antiguidade</h2>
+                    </div>
+                </li>
+                <div class="item" onclick="idademedia()">
+                    <img src="https://i.ibb.co/7x59NZNt/R.jpg" height="120" width="120">
+                    <h2>Idade Média</h2>
+                </div>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <div class="item" onclick="revolucaoindustrial()">
+                        <img src="https://i.ibb.co/67GVbJ4s/4323756.jpg" height="120" width="120">
+                        <h2>Revolução Industrial</h2>
+                    </div>
+                </li>
+                
+                <li>
+                    <div class="item" onclick="seculoxx()">
+                        <img src="https://i.ibb.co/XrLLQsxJ/16688001046377de68674e6-1668800104-3x2-rt.jpg" height="120" width="120">
+                        <h2>Século XX</h2>
+                    </div>
+                </li>
+                <li>
+                    <div class="item" onclick="seculoxxi()">
+                        <img src="https://i.ibb.co/XrLLQsxJ/16688001046377de68674e6-1668800104-3x2-rt.jpg" height="120" width="120">
+                        <h2>Século XXI</h2>
                     </div>
                 </li>
             </ul>
         </div>
+
     </main>
     <script src="js/navigarion.js"></script>
 </body>
