adicionando barra de pesquisa

--- a/home.html
+++ b/home.html
@@ -1,20 +1,3 @@
-
-1 de 2.194
-(sem assunto)
-Caixa de entrada
-VICTOR HUGO VICHIATO NOGUEIRA
-Anexos
-12:00 (há 2 minutos)
-para mim
-
-Cuidado com esta mensagem.
-Não é possível confirmar se um ou mais anexos desta mensagem são seguros. Não baixe nenhum arquivo se você não conhecer o remetente ou não tiver certeza de que este e-mail foi enviado por ele.
-
-Denunciar spamParece segura
-
-1 anexo
-  •  Anexos verificados pelo Gmail
-O download do anexo foi desativado. Se você confia nesta mensagem e quer fazer o download do anexo, clique em "É segura" no banner acima.
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,6 +13,11 @@ O download do anexo foi desativado. Se você confia nesta mensagem e quer fazer 
 <body>
     <header>
         <h1>A História da Tecnologia</h1>
+        <img src="img/logo.png" class="topleft" height="100" width="100">
+        <div class="searchBar toprigth" >
+            <input type="text" placeholder="buscar..." class="searchInput">
+            <img src="img/search.png" class="searchBtn"  height="15" width="15">
+        </div>
     </header>
     <main>
         <div class="timeline">
@@ -83,6 +71,7 @@ O download do anexo foi desativado. Se você confia nesta mensagem e quer fazer 
 
     </main>
     <script src="js/navigarion.js"></script>
+    <script src="js/search.js"></script>
 </body>
 
 
