--- a/pagina1.html
+++ b/pagina1.html
@@ -29,7 +29,7 @@
             <!--volta para a pagina inicial-->
             <button onclick="returnToHome()">home</button>
             <!--vai para a proxima pagina wm relação a tempologia-->
-            <button onclick="">ir para o posterior</button>
+            <button onclick="neolitico()">ir para o posterior</button>
         </div>
     </main>
     <script src="js/navigarion.js"></script>
