deixando as paginas em pt-br

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <!--coisas basicas não expliquei ok-->
 <!DOCTYPE html>
 <!--estrutura inicial do codigo com a lingua em ingles pode ser alterada depois-->
-<html lang="en">
+<html lang="pt-BR">
 <!--define toda a estrutura-->
 
 <head>
