--- a/pagina5.html
+++ b/pagina5.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>    
-      <link rel="stylesheet" href="css/pages.css">
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>pagina 5</title>
-      <body>
-            <header>
-                <h1>Revolução Industrial</h1>
-            </header>
-            <main>
-                <div class="text">
-                    <h2>Revolução Industrial (1750 - 1900): </h2>
-                    <img class="right" src="https://i.ibb.co/67GVbJ4s/4323756.jpg">
-                    <p>A Revolução Industrial (1750-1900) foi uma explosão de tecnologia que mudou tudo! 
-                        Na primeira fase, a máquina a vapor foi o motor principal, 
-                        turbinando a produção têxtil com um monte de máquinas novas e 
-                        levando a locomotivas e navios a vapor. A produção de ferro e 
-                        aço ficou mais eficiente. Na segunda fase, a eletricidade 
-                        iluminou tudo e moveu indústrias e transportes. O petróleo e a 
-                        química criaram materiais novos. O motor de combustão interna 
-                        inventou o carro e abriu as portas para o avião. A comunicação 
-                        deu um salto com telégrafo, telefone e rádio. A linha de montagem 
-                        revolucionou a produção. Foi um período de invenções que transformaram o 
-                        mundo completamente!
-                    </p>
-                  <li>Máquina a Vapor (Watt): Energia para fábricas, trens, navios. Urbanização, produção em massa.
-                </li>
-                <li>Tear Mecânico (Cartwright), Fiadeira Mecânica (Hargreaves): Aumento drástico da produção têxtil. Novas indústrias.
-                </li>
-                <li>Eletricidade (Faraday, Edison, Tesla): Iluminação, energia industrial, comunicação (telégrafo, telefone). Transformação da vida urbana e do trabalho.
-                </li>
-                <li>Motor a Combustão Interna (Benz, Daimler): Automóvel, avião. Mobilidade 
-                </li>
-                <li>Transistor (Bardeen, Brattain, Shockley): Eletrônica miniaturizada. Rádio, televisão, primeiros computadores.
-                  </li>
-                   
-                </div>
-                <div>
-                    <!--volta para a pagina inicial-->
-                    <button onclick="returnToHome()">home</button>
-                    <!--vai para a proxima pagina wm relação a tempologia-->
-                    <button onclick="">ir para o posterior</button>
-                </div>
-            </main>
-            <footer></footer>
-            <script src="js/navigarion.js"></script>
-        </body>
-        
-        </html>
+<html lang="pt-BR">
+
+<head>
+    <link rel="stylesheet" href="css/pages.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>pagina 5</title>
+
+<body>
+    <header>
+        <h1>Revolução Industrial</h1>
+    </header>
+    <main>
+        <div class="text">
+            <h2>Revolução Industrial (1750 - 1900): </h2>
+            <img class="right" src="https://i.ibb.co/67GVbJ4s/4323756.jpg">
+            <p>A Revolução Industrial (1750-1900) foi uma explosão de tecnologia que mudou tudo!
+                Na primeira fase, a máquina a vapor foi o motor principal,
+                turbinando a produção têxtil com um monte de máquinas novas e
+                levando a locomotivas e navios a vapor. A produção de ferro e
+                aço ficou mais eficiente. Na segunda fase, a eletricidade
+                iluminou tudo e moveu indústrias e transportes. O petróleo e a
+                química criaram materiais novos. O motor de combustão interna
+                inventou o carro e abriu as portas para o avião. A comunicação
+                deu um salto com telégrafo, telefone e rádio. A linha de montagem
+                revolucionou a produção. Foi um período de invenções que transformaram o
+                mundo completamente!
+            </p>
+            <li>Máquina a Vapor (Watt): Energia para fábricas, trens, navios. Urbanização, produção em massa.
+            </li>
+            <li>Tear Mecânico (Cartwright), Fiadeira Mecânica (Hargreaves): Aumento drástico da produção têxtil. Novas
+                indústrias.
+            </li>
+            <li>Eletricidade (Faraday, Edison, Tesla): Iluminação, energia industrial, comunicação (telégrafo,
+                telefone). Transformação da vida urbana e do trabalho.
+            </li>
+            <li>Motor a Combustão Interna (Benz, Daimler): Automóvel, avião. Mobilidade
+            </li>
+            <li>Transistor (Bardeen, Brattain, Shockley): Eletrônica miniaturizada. Rádio, televisão, primeiros
+                computadores.
+            </li>
+
+        </div>
+        <div>
+            <!--volta para a pagina inicial-->
+            <button onclick="returnToHome()">home</button>
+            <!--vai para a proxima pagina wm relação a tempologia-->
+            <button onclick="">ir para o posterior</button>
+        </div>
+    </main>
+    <footer></footer>
+    <script src="js/navigarion.js"></script>
+</body>
+
+</html>
