--- a/pagina7.html
+++ b/pagina7.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>    
-      <link rel="stylesheet" href="css/pages.css">
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>pagina 7</title>
-      <body>
-            <header>
-                <h1>Século XXI</h1>
-            </header>
-            <main>
-                <div class="text">
-                    <h2>Século XXI (2000 - Presente): </h2>
-                    <img class="right" src="https://i.ibb.co/XrLLQsxJ/16688001046377de68674e6-1668800104-3x2-rt.jpg">
-                    <p>O século XXI viu uma explosão tecnológica, especialmente nas 
-                        áreas digitais (internet móvel, redes sociais, nuvem, IA, IoT) 
-                        e outras (biotecnologia, energias renováveis, VR/AR, impressão 
-                        3D, blockchain, nanotecnologia). Isso transformou comunicação, 
-                        acesso à informação, medicina, energia e muito mais, trazendo 
-                        benefícios e desafios como privacidade e desigualdade digital. 
-                        É uma era de inovação constante que continua a moldar o 
-                        futuro.
-                    </p>
-                  <li>Inteligência Artificial (IA): Aprendizado de máquina, reconhecimento de padrões. Automação, análise de dados.
+<html lang="pt-BR">
 
-                </li>
-                <li>Internet das Coisas (IoT): Conexão de objetos. Automação residencial, industrial, cidades inteligentes.
+<head>
+    <link rel="stylesheet" href="css/pages.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>pagina 7</title>
 
-                </li>
-                <li>Computação em Nuvem: Acesso remoto a recursos computacionais. Escalabilidade, flexibilidade.
+<body>
+    <header>
+        <h1>Século XXI</h1>
+    </header>
+    <main>
+        <div class="text">
+            <h2>Século XXI (2000 - Presente): </h2>
+            <img class="right" src="https://i.ibb.co/XrLLQsxJ/16688001046377de68674e6-1668800104-3x2-rt.jpg">
+            <p>O século XXI viu uma explosão tecnológica, especialmente nas
+                áreas digitais (internet móvel, redes sociais, nuvem, IA, IoT)
+                e outras (biotecnologia, energias renováveis, VR/AR, impressão
+                3D, blockchain, nanotecnologia). Isso transformou comunicação,
+                acesso à informação, medicina, energia e muito mais, trazendo
+                benefícios e desafios como privacidade e desigualdade digital.
+                É uma era de inovação constante que continua a moldar o
+                futuro.
+            </p>
+            <li>Inteligência Artificial (IA): Aprendizado de máquina, reconhecimento de padrões. Automação, análise de
+                dados.
 
-                </li>
-                <li>Biotecnologia Avançada (CRISPR): Edição genética precisa. Potencial para cura de doenças, modificação de organismos.
+            </li>
+            <li>Internet das Coisas (IoT): Conexão de objetos. Automação residencial, industrial, cidades inteligentes.
 
-                </li>
-                   
-                </div>
-                <div>
-                    <!--volta para a pagina inicial-->
-                    <button onclick="returnToHome()">home</button>
-                    <!--vai para a proxima pagina wm relação a tempologia-->
-                    <button onclick="">ir para o posterior</button>
-                </div>
-            </main>
-            <footer></footer>
-            <script src="js/navigarion.js"></script>
-        </body>
-        
-        </html>
+            </li>
+            <li>Computação em Nuvem: Acesso remoto a recursos computacionais. Escalabilidade, flexibilidade.
+
+            </li>
+            <li>Biotecnologia Avançada (CRISPR): Edição genética precisa. Potencial para cura de doenças, modificação de
+                organismos.
+
+            </li>
+
+        </div>
+        <div>
+            <!--volta para a pagina inicial-->
+            <button onclick="returnToHome()">home</button>
+            <!--vai para a proxima pagina wm relação a tempologia-->
+            <button onclick="">ir para o posterior</button>
+        </div>
+    </main>
+    <footer></footer>
+    <script src="js/navigarion.js"></script>
+</body>
+
+</html>
