--- a/pagina3.html
+++ b/pagina3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="css/pages.css">
     <meta charset="UTF-8">
