adicionando ir para posterior

--- a/home.html
+++ b/home.html
@@ -23,7 +23,8 @@
     <header>
         <h1>A História da Tecnologia</h1>
         <!--define a imagem do logo da pagina-->
-        <img src="img/logo.png" class="topleft" height="100" width="100">
+        <img src="img/logo.png" class="topleft clicable"
+         onclick="returnToHome()" height="100" width="100">
         <!--div do campo de pesquisa-->
         <div class="searchBar toprigth">
             <!-- Campo de entrada de texto para o usuário digitar o termo de busca -->
@@ -35,7 +36,7 @@
     <main>
         <!--div com os itens-->
         <div class="timeline">
-            <!--WARNING: a ca uma ul deve haver apenas 4 itens-->
+            <!--WARNING: a cada ul deve haver apenas 4 itens-->
             <!--lista desordenada com os itens-->
             <ul>
                 <!--item da lista a estrutura deve se repetir em todos os items da lista-->
