--- a/pagina1.html
+++ b/pagina1.html
@@ -13,6 +13,8 @@
 <body>
     <!-- Cabecalho da pagina -->
     <header>
+        <img src="img/logo.png" class="topleft clicable"
+         onclick="returnToHome()" height="100" width="100">
         <h1>as primeiras ferramentas da humanidade</h1>
     </header>
 
@@ -33,8 +35,6 @@
         </div>
 
         <div>
-            <!-- Botao para voltar a pagina inicial -->
-            <button onclick="returnToHome()">home</button>
             <!-- Botao para ir para a proxima pagina na linha do tempo -->
             <button onclick="neolitico()">ir para o posterior</button>
         </div>
