--- a/pagina2.html
+++ b/pagina2.html
@@ -9,6 +9,8 @@
 
 <body>
     <header>
+        <img src="img/logo.png" class="topleft clicable"
+        onclick="returnToHome()" height="100" width="100">
         <h1>Sedentarismo e desenvolvimento da agricultura</h1>
     </header>
     <main>
@@ -37,9 +39,9 @@
         </div>
         <div>
             <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">home</button>
+            <button onclick="paleolitico()">ir para anterior</button>
             <!--vai para a proxima pagina wm relação a tempologia-->
-            <button onclick="">ir para o posterior</button>
+            <button onclick="antiguidade()">ir para o posterior</button>
         </div>
     </main>
     <footer></footer>
