--- a/pagina3.html
+++ b/pagina3.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina3</title>
     <header>
+        <img src="img/logo.png" class="topleft clicable"
+         onclick="returnToHome()" height="100" width="100">
+        
         <h1>Idade Antiga</h1>
     </header>
     <main>
@@ -25,9 +28,9 @@
         </div>
         <div>
             <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">home</button>
+            <button onclick="neolitico()">ir para a anterior</button>
             <!--vai para a proxima pagina wm relação a tempologia-->
-            <button onclick="">ir para o posterior</button>
+            <button onclick="idademedia()">ir para o posterior</button>
         </div>
     </main>
     <footer></footer>
