--- a/pagina5.html
+++ b/pagina5.html
@@ -9,6 +9,8 @@
 
 <body>
     <header>
+        <img src="img/logo.png" class="topleft clicable"
+         onclick="returnToHome()" height="100" width="100">
         <h1>Revolução Industrial</h1>
     </header>
     <main>
@@ -44,9 +46,9 @@
         </div>
         <div>
             <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">home</button>
+            <button onclick="idademedia()">ir paera a posterior </button>
             <!--vai para a proxima pagina wm relação a tempologia-->
-            <button onclick="">ir para o posterior</button>
+            <button onclick="seculoxx()">ir para o posterior</button>
         </div>
     </main>
     <footer></footer>
