--- a/pagina6.html
+++ b/pagina6.html
@@ -9,6 +9,8 @@
 
 <body>
     <header>
+        <img src="img/logo.png" class="topleft clicable"
+         onclick="returnToHome()" height="100" width="100">
         <h1>Século XX</h1>
     </header>
     <main>
@@ -45,9 +47,9 @@
         </div>
         <div>
             <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">home</button>
+            <button onclick="revolucaoindustrial()">ir para anterior</button>
             <!--vai para a proxima pagina wm relação a tempologia-->
-            <button onclick="">ir para o posterior</button>
+            <button onclick="seculoxxi()">ir para o posterior</button>
         </div>
     </main>
     <footer></footer>
