--- a/pagina4.html
+++ b/pagina4.html
@@ -9,6 +9,8 @@
 
 <body>
     <header>
+        <img src="img/logo.png" class="topleft clicable"
+         onclick="returnToHome()" height="100" width="100">
         <h1>Idade Média</h1>
     </header>
     <main>
@@ -42,9 +44,9 @@
         </div>
         <div>
             <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">home</button>
+            <button onclick="antiguidade()">ir para a anterior</button>
             <!--vai para a proxima pagina wm relação a tempologia-->
-            <button onclick="">ir para o posterior</button>
+            <button onclick="revolucaoindustrial()">ir para o posterior</button>
         </div>
     </main>
     <footer></footer>
