--- a/pagina7.html
+++ b/pagina7.html
@@ -9,6 +9,9 @@
 
 <body>
     <header>
+        <img src="img/logo.png" class="topleft clicable"
+         onclick="returnToHome()" height="100" width="100">
+        
         <h1>Século XXI</h1>
     </header>
     <main>
@@ -42,9 +45,7 @@
         </div>
         <div>
             <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">home</button>
-            <!--vai para a proxima pagina wm relação a tempologia-->
-            <button onclick="">ir para o posterior</button>
+            <button onclick="seculoxx()">ir para anterior</button>
         </div>
     </main>
     <footer></footer>
