arrumando pesquisa e adicionando testes

--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
     </main>
     <!--importa os scripts javascript-->
     <script src="js/navigarion.js"></script>
-    <script src="js/search.js"></script>
+    <script type="module" src="js/search.js"></script>
 </body>
 
 
