mudança de imagem

--- a/pagina7.html
+++ b/pagina7.html
@@ -16,7 +16,7 @@
     <main>
         <div class="text">
             <h2>Século XXI (2000 - Presente): </h2>
-            <img class="right" src="https://i.ibb.co/XrLLQsxJ/16688001046377de68674e6-1668800104-3x2-rt.jpg">
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
             <p>O século XXI viu uma explosão tecnológica, especialmente nas
                 áreas digitais (internet móvel, redes sociais, nuvem, IA, IoT)
                 e outras (biotecnologia, energias renováveis, VR/AR, impressão
