mudanca de imagem home

--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
                 </li>
                 <li>
                     <div class="item" onclick="seculoxxi()">
-                        <img src="https://i.ibb.co/XrLLQsxJ/16688001046377de68674e6-1668800104-3x2-rt.jpg" height="120"
+                        <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120"
                             width="120">
                         <h2>Século XXI</h2>
                     </div>
