colocando as paginas para pages

--- a/pages/home.html
+++ b/pages/home.html
@@ -13,7 +13,7 @@
     <!--define o titulo da pagina-->
     <title>História da Tecnologia</title>
     <!--define o estilo da pagina ou linka o css como preferir-->
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 
 <!--define o corpo da pagina-->
@@ -23,14 +23,14 @@
     <header>
         <h1>A História da Tecnologia</h1>
         <!--define a imagem do logo da pagina-->
-        <img src="img/logo.png" class="topleft clicable"
+        <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
         <!--div do campo de pesquisa-->
         <div class="searchBar toprigth">
             <!-- Campo de entrada de texto para o usuário digitar o termo de busca -->
             <input type="text" placeholder="buscar..." class="searchInput">
             <!-- Ícone de lupa que pode ser usado como botão para acionar a busca -->
-            <img src="img/search.png" class="searchBtn" height="15" width="15">
+            <img src="../img/search.png" class="searchBtn" height="15" width="15">
         </div>
     </header>
     <main>
@@ -92,8 +92,8 @@
 
     </main>
     <!--importa os scripts javascript-->
-    <script src="js/navigarion.js"></script>
-    <script type="module" src="js/search.js"></script>
+    <script src="../js/navigation.js"></script>
+    <script type="module" src="../js/search.js"></script>
 </body>
 
 
