--- a/pages/pagina1.html
+++ b/pages/pagina1.html
@@ -7,13 +7,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina 1</title> <!-- Titulo da pagina que aparece na aba do navegador -->
-    <link rel="stylesheet" href="css/pages.css"> <!-- Link para o arquivo de estilos -->
+    <link rel="stylesheet" href="../css/pages.css"> <!-- Link para o arquivo de estilos -->
 </head>
 
 <body>
     <!-- Cabecalho da pagina -->
     <header>
-        <img src="img/logo.png" class="topleft clicable"
+        <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
         <h1>as primeiras ferramentas da humanidade</h1>
     </header>
@@ -42,7 +42,7 @@
     </main>
 
     <!-- Script para navegacao entre paginas -->
-    <script src="js/navigarion.js"></script>
+    <script src="../js/navigation.js"></script>
 </body>
 
 </html>
