--- a/pages/pagina1.html
+++ b/pages/pagina1.html
@@ -34,7 +34,7 @@
                 ancestrais bem mais "tranquila".</p>
         </div>
 
-        <div>
+        <div class="buttons">
             <!-- Botao para ir para a proxima pagina na linha do tempo -->
             <button onclick="neolitico()">ir para o posterior</button>
             <button onclick="curiopag1()">curiosidades</button>
