--- a/pages/pagina4.html
+++ b/pages/pagina4.html
@@ -16,7 +16,7 @@
     <main>
         <div class="text">
             <h2>Idade Média (500 d.C. - 1500 d.C.): </h2>
-            <img class="right" src="https://i.ibb.co/7x59NZNt/R.jpg">
+            <img class="right" src="https://i.ibb.co/7x59NZNt/R.jpg" height="250" width="250">
             <p>Na Idade Média, a tecnologia deu uns passinhos
                 importantes, viu? Na agricultura, o arado novo e a
                 rotação de culturas fizeram a comida render mais.
