--- a/pages/pagina9.html
+++ b/pages/pagina9.html
@@ -11,11 +11,11 @@
     <header>
         <img src="img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>Século XXI</h1>
+        <h1>Tecnologias Biomédicas: Tomografia, DNA, Próteses Inteligentes</h1>
     </header>
     <main>
         <div class="text">
-            <h2>Século XXI (2000 - Presente): </h2>
+            <h2>Tecnologias Biomédicas: Tomografia, DNA, Próteses Inteligentes: </h2>
             <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
             <p>O século XXI viu uma explosão tecnológica, especialmente nas
                 áreas digitais (internet móvel, redes sociais, nuvem, IA, IoT)
