adicionando paginas, textos e css

--- a/pages/home.html
+++ b/pages/home.html
@@ -89,6 +89,15 @@
                 </li>
             </ul>
         </div>
+        <li>
+                    <div class="item" onclick="ferramentaprehistoria()">
+                        <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120"
+                            width="120">
+                        <h2>Ferramenta da Pré-História</h2>
+                    </div>
+                </li>
+            </ul>
+        </div>
 
     </main>
     <!--importa os scripts javascript-->
