--- a/pages/pagina14.html
+++ b/pages/pagina14.html
@@ -5,50 +5,45 @@
     <link rel="stylesheet" href="css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 7</title>
+    <title>pagina 14</title>
+    <link rel="stylesheet" href="../css/pages.css">
 
 <body>
     <header>
-        <img src="img/logo.png" class="topleft clicable"
+        <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>Século XXI</h1>
+        <h1>O Início da Internet e a Expansão Global</h1>
     </header>
     <main>
         <div class="text">
-            <h2>Século XXI (2000 - Presente): </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
-            <p>O século XXI viu uma explosão tecnológica, especialmente nas
-                áreas digitais (internet móvel, redes sociais, nuvem, IA, IoT)
-                e outras (biotecnologia, energias renováveis, VR/AR, impressão
-                3D, blockchain, nanotecnologia). Isso transformou comunicação,
-                acesso à informação, medicina, energia e muito mais, trazendo
-                benefícios e desafios como privacidade e desigualdade digital.
-                É uma era de inovação constante que continua a moldar o
-                futuro.
+            <h2>O Início da Internet e a Expansão Global: </h2>
+            <img src="" alt="images-2" border="0">
+            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
+
+A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
             </p>
-            <li>Inteligência Artificial (IA): Aprendizado de máquina, reconhecimento de padrões. Automação, análise de
-                dados.
+            <li>Início da Internet
 
             </li>
-            <li>Internet das Coisas (IoT): Conexão de objetos. Automação residencial, industrial, cidades inteligentes.
+            <li>Expansão da internet para o público geral.
 
             </li>
-            <li>Computação em Nuvem: Acesso remoto a recursos computacionais. Escalabilidade, flexibilidade.
-
+            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
             </li>
-            <li>Biotecnologia Avançada (CRISPR): Edição genética precisa. Potencial para cura de doenças, modificação de
-                organismos.
+            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
+
+
 
             </li>
 
         </div>
         <div>
             <!--volta para a pagina inicial-->
-            <button onclick="seculoxx()">ir para anterior</button>
+            <button onclick="returnToHome()">Voltar</button>
         </div>
     </main>
     <footer></footer>
-    <script src="js/navigarion.js"></script>
+    <script src="../js/navigation.js"></script>
 </body>
 
 </html>
