--- a/pages/pagina8.html
+++ b/pages/pagina8.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="../css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina 8</title>
@@ -10,27 +10,47 @@
 
 <body>
     <header>
-        <img src="img/logo.png" class="topleft clicable"
+        <img src="../img/logo.png" class="topleft clicable"
          onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <h1>Ferramentas de Pedra na Pré-História</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="https://i.ibb.co/Z6r68yYf/images-2.jpg" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
-
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
+            <h2>Ferramentas de Pedra na Pré-História: </h2>
+            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <p>As ferramentas de pedra representaram um marco fundamental na evolução dos hominídeos, sendo indispensáveis para a sobrevivência e o desenvolvimento das 
+                primeiras sociedades humanas. Essas ferramentas, criadas a partir de rochas como sílex, obsidiana e quartzo, eram usadas em uma ampla gama de atividades 
+                do dia a dia, incluindo caça, corte de carne, preparação de peles, coleta de plantas e escavação. A habilidade de fabricar e utilizar essas ferramentas 
+                marcou um avanço significativo na capacidade tecnológica e cognitiva dos hominídeos, permitindo-lhes interagir de forma mais eficaz com o ambiente.
             </p>
-            <li>Início da Internet
+            <li>Origens no Paleolítico
+As primeiras ferramentas de pedra surgiram durante o Paleolítico Inferior, período conhecido como 
+Idade da Pedra Lascada, que se estende de aproximadamente 2,6 milhões a 300 mil anos atrás. Arqueólogos descobriram na Etiópia, em sítios como Lomekwi 3, evidências 
+datadas de cerca de 3,3 milhões de anos, que representam os vestígios mais antigos conhecidos de ferramentas de pedra. Essas descobertas sugerem que hominídeos, 
+possivelmente Australopithecus ou espécies próximas, já dominavam técnicas rudimentares de lascamento para criar instrumentos cortantes. Essas ferramentas primitivas, 
+muitas vezes simples lascas afiadas, eram usadas para cortar carne, quebrar ossos e processar vegetais.
+
+No Paleolítico Médio e Superior, as técnicas de fabricação evoluíram, resultando em ferramentas mais sofisticadas. Podemos chamar de “ferramentas complexas” os pedaços de rocha lapidados com formatos pontiagudos ou lâminas afiadas, ideais para tarefas como cortar madeira, cavar buracos, raspar peles e até mesmo realizar rituais. Um exemplo notável é o machado de mão acheulense, amplamente utilizado por espécies como o Homo erectus e o Homo heidelbergensis, que demonstrava um design simétrico e funcional, indicando um avanço no planejamento e na habilidade manual.
 
             </li>
-            <li>Expansão da internet para o público geral.
-
-            </li>
+            <br/>
+            <li> A Revolução Agrícola e o Neolítico
+Com a chegada do Neolítico, por volta de 10 mil a.C., a Revolução Agrícola transformou profundamente as sociedades humanas, que passaram de um estilo de vida nômade para 
+comunidades sedentárias baseadas na agricultura e na domesticação de animais. Nesse contexto, as ferramentas de pedra experimentaram uma evolução significativa. Além das 
+técnicas de lascamento, os humanos desenvolveram o polimento de pedras, criando instrumentos mais duráveis e precisos, como enxadas, foices, machados polidos e mós para 
+triturar grãos. Essas ferramentas foram essenciais para o cultivo de terras, a colheita de cereais e a construção de habitações, sustentando o crescimento de vilarejos e, 
+eventualmente, das primeiras civilizações.
+As foices neolíticas, por exemplo, frequentemente feitas com lâminas de sílex inseridas em cabos de madeira ou osso, permitiam a colheita 
+eficiente de culturas como trigo e cevada. As enxadas de pedra polida facilitavam o preparo do solo, enquanto os machados eram usados para 
+desmatar áreas e construir estruturas. Essa diversificação e especialização das ferramentas refletiam não apenas avanços tecnológicos, 
+mas também uma maior complexidade social e econômica.
+        </li>
+           <br/> 
             <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
             </li>
+            <br>
             <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
+            <br>
 
 
 
@@ -39,11 +59,11 @@ A partir do início da década de 1990, com o lançamento de navegadores como o 
         </div>
         <div>
             <!--volta para a pagina inicial-->
-            <button onclick="seculoxx()">ir para anterior</button>
+            <button onclick="returnToHome()">Voltar</button>
         </div>
     </main>
     <footer></footer>
-    <script src="js/navigarion.js"></script>
+    <script src="../js/navigation.js"></script>
 </body>
 
 </html>
