--- a/pages/pagina7.html
+++ b/pages/pagina7.html
@@ -45,6 +45,7 @@
         <div>
             <!--volta para a pagina inicial-->
             <button onclick="seculoxx()">ir para anterior</button>
+            <button onclick="ferramentaprehistoria()">Ferramentas da Pré-História</button>
         </div>
     </main>
     <footer></footer>
