--- a/pages/home.html
+++ b/pages/home.html
@@ -23,8 +23,8 @@
     <header>
         <h1>A História da Tecnologia</h1>
         <!--define a imagem do logo da pagina-->
-        <img src="../img/logo.png" class="topleft clicable"
-         onclick="returnToHome()" height="100" width="100">
+        <img src="../img/logo.png" class="topleft clicable logo"
+         onclick="returnToHome()" height="120" width="120" >
         <!--div do campo de pesquisa-->
         <div class="searchBar toprigth">
             <!-- Campo de entrada de texto para o usuário digitar o termo de busca -->
@@ -88,8 +88,8 @@
                     </div>
                 </li>
             </ul>
-        </div>
-        <li>
+            <ul>
+                <li>
                     <div class="item" onclick="ferramentaprehistoria()">
                         <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120"
                             width="120">
