colocando mais informações

--- a/pages/home.html
+++ b/pages/home.html
@@ -23,8 +23,8 @@
     <header>
         <h1>A História da Tecnologia</h1>
         <!--define a imagem do logo da pagina-->
-        <img src="../img/logo.png" class="topleft clicable logo"
-         onclick="returnToHome()" height="120" width="120" >
+        <img src="../img/logo.png" class="topleft clicable"
+         onclick="returnToHome()" height="100" width="100">
         <!--div do campo de pesquisa-->
         <div class="searchBar toprigth">
             <!-- Campo de entrada de texto para o usuário digitar o termo de busca -->
@@ -85,15 +85,6 @@
                         <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120"
                             width="120">
                         <h2>Século XXI</h2>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <div class="item" onclick="ferramentaprehistoria()">
-                        <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120"
-                            width="120">
-                        <h2>Ferramenta da Pré-História</h2>
                     </div>
                 </li>
             </ul>
