--- a/pages/pagina1.html
+++ b/pages/pagina1.html
@@ -13,8 +13,7 @@
 <body>
     <!-- Cabecalho da pagina -->
     <header>
-        <img src="../img/logo.png" class="topleft clicable"
-         onclick="returnToHome()" height="100" width="100">
+        <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
         <h1>as primeiras ferramentas da humanidade</h1>
     </header>
 
@@ -24,7 +23,7 @@
 
             <h2>Paleolitico (2.5 mi a.C. - 10.000 a.C.) - a primeira inovacao da humanidade</h2>
 
-            <img class="right" src="https://i.ibb.co/0jQkn6cC/download.jpg" alt="Ferramentas do Paleolitico">
+            <a href="https://ibb.co/VpJBq39p"><img src="https://i.ibb.co/VpJBq39p/1639596499.jpg" alt="1639596499"></a>
 
             <p>No Paleolitico, a parada toda foi a pedra e o fogo. A galera aprendeu a quebrar pedra pra fazer
                 ferramenta que cortava, raspava e furava, e essas ferramentas foram ficando cada vez mais elaboradas com
@@ -33,10 +32,21 @@
                 ajudava a fazer ferramenta. Essas duas tecnologias foram a base pra tudo e fizeram a vida dos nossos
                 ancestrais bem mais "tranquila".</p>
         </div>
-
         <div class="buttons">
             <!-- Botao para ir para a proxima pagina na linha do tempo -->
             <button onclick="neolitico()">ir para o posterior</button>
+        </div>
+        <div class="moreInformations">
+            <h2>veja mais sobre: </h2>
+            <!--ul caso seja necessario mais itens-->
+            <ul>
+                <li>
+                    <div class="item" onclick="ferramentaprehistoria()">
+                        <h3>ferramentas do paleolitico</h3>
+                        <img src="https://i.ibb.co/YB3qmV2d/download.jpg" >
+                    </div>
+                </li>
+            </ul>
         </div>
     </main>
 
